--- a/price-grid/style-mobile.css
+++ b/price-grid/style-mobile.css
@@ -66,13 +66,8 @@
         position: relative;
 
     }
-    .btn1, .btn2, .btn3{
-        width: 10px;
-        height: 10px;
-        border: 2px solid rgb(250, 162, 0);
-        border-radius: 50%;
-        margin: 0px 4px;
-    }
+}
+@media screen and (max-width: 573px) {
     .navigation{
         width: 100%;
         height: 18px;
@@ -83,8 +78,16 @@
         background-color: rgb(252, 252, 252);
         border-radius: 0 0 15px 15px;
     }
-}
-@media screen and (max-width: 573px) {
+    .btn1{
+        background-color: #9d00ff;
+    }
+    .btn1, .btn2, .btn3{
+        width: 10px;
+        height: 10px;
+        border: 2px solid rgba(83, 29, 158, 0.459);
+        border-radius: 50%;
+        margin: 0px 4px;
+    }
 
     .c-hidden{
         border: 1px solid rgb(252, 252, 252);
