--- a/Aleksei_portfolio/style/css.css
+++ b/Aleksei_portfolio/style/css.css
@@ -344,7 +344,6 @@ main{
     background-color: var(--claro);
     max-width: 1200px;
     height: auto;
-    padding: 0 21px;
 }
 .projetos-subtitulo{
     display: flex;
@@ -378,15 +377,34 @@ main{
     max-width: 1200px;
 }
 .content-slide{
-    width: 171%;
-    display: flex;
-    flex-direction: row;
+    max-width: 1200px;
+    min-width: 700px;
+    height: 500px;
     background-color: rgb(0, 255, 157);
-    gap: 65px;
+    overflow: hidden;
+    position: relative;
+    padding: 20px 50px;
 }
 .projeto{
     background-color: aliceblue;
 }
+
+#projeto-calculadora{
+    width: 70px;
+    background-color: aqua;
+}
+.slide-flex{
+    width: 150%;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
+.projeto1{
+    width: 400px;
+    height: 500px;
+    background-color: aquamarine;
+}
+
 img{
     width: 100%;
     height: 100%;
