--- a/Aleksei_portfolio/style/css.css
+++ b/Aleksei_portfolio/style/css.css
@@ -339,11 +339,23 @@ main{
 
 
 
+.container-projetos{
+    /*margin: 50px auto;*/
+    /*max-width: 1200px;*/
+    /* height: 1000px; */
+    width: 100vw;
+    background-color: rgb(252, 229, 230);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    padding: 47px;
+}
 .projetos{
-    margin: 50px 0;
-    background-color: var(--claro);
     max-width: 1200px;
-    height: auto;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 .projetos-subtitulo{
     display: flex;
@@ -376,14 +388,29 @@ main{
     overflow: hidden;
     max-width: 1200px;
 }
-.content-slide{
-    max-width: 1200px;
-    min-width: 700px;
-    height: 500px;
-    background-color: rgb(0, 255, 157);
+.content-slide-hidden{
+    max-width: 900px;
+    min-width: 542px;
+    border-radius: 5px;
     overflow: hidden;
     position: relative;
-    padding: 20px 50px;
+}
+.slide{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-around;
+    padding: 10px 0;
+}
+.cards-projeto{
+}
+.slides{
+    width: 30%;
+    height: 100%;
+}
+.img{
+    width: 100%;
+    height: 200px;
 }
 .projeto{
     background-color: aliceblue;
@@ -392,12 +419,6 @@ main{
 #projeto-calculadora{
     width: 70px;
     background-color: aqua;
-}
-.slide-flex{
-    width: 150%;
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
 }
 .projeto1{
     width: 400px;
@@ -488,4 +509,49 @@ footer{
 .fa-instagram:hover, .fa-whatsapp:hover, .fa-envelope:hover{
     color: rgb(0, 230, 69);
     transition: .5s;
+}
+
+
+#box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 30%;
+  height: 100%;
+  color: white;
+  font-family: 'Raleway';
+  font-size: 2.5rem;
+  z-index: 2;
+}
+.gradient-border {
+  --borderWidth: 3px;
+  background: #1D1F20;
+  position: relative;
+  border-radius: var(--borderWidth);
+}
+.gradient-border:after {
+  content: '';
+  position: absolute;
+  top: calc(-2 * var(--borderWidth));
+  left: calc(-2 * var(--borderWidth));
+  height: calc(102% + var(--borderWidth) * 2);
+  width: calc(103% + var(--borderWidth) * 2);
+  background: linear-gradient(60deg, #f79533, #f37055, #ef4e7b, #a166ab, #5073b8, #1098ad, #07b39b, #6fba82);
+  border-radius: calc(2 * var(--borderWidth));
+  z-index: -1;
+  animation: animatedgradient 3s ease alternate infinite;
+  background-size: 300% 300%;
+}
+
+
+@keyframes animatedgradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
